--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=todoList
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql:localhost:3307/todoList
+spring.datasource.url=jdbc:mysql://localhost:3307/todoList
 spring.datasource.username=todoUser
 spring.datasource.password=senha123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
